chore(ci): remove unsupported JVM ars